# MRI-study

./: .gitignore  README.md  how-to-pyproject.md  notas-gerais.md  pyproject.toml
examples/: fft.ipynb  fft_image.ipynb  final_snr_relations.csv  final_snr_relations_2.csv  gradient.ipynb  middle_snr_relations.csv  middle_snr_relations_2.csv  middle_snr_relations_ref.csv  relaxation_times.ipynb  sigma_relations.ipynb  sigma_relations_2.csv  sigma_relations_refactor.ipynb  snr.ipynb  snr_limits.ipynb
examples/MPM/: L_testing.ipynb  checkpoint-agosto.ipynb  checkpoint-setembro.ipynb  dummy.ipynb  matrix_condition.ipynb  maximize_s0_t2.ipynb  mpm.ipynb  new_snr.ipynb  second_smart_noise_filtering.ipynb  single_peak.ipynb  single_peak_noise.ipynb  single_peak_noise_non_interactive.ipynb  smart_noise_filtering.ipynb  spec_components.ipynb  spec_components_2.ipynb  spec_components_3.ipynb  svd_second_testing.ipynb  svd_testing.ipynb  t2_exploration.ipynb  time_varying.ipynb  two_peaks.ipynb  two_peaks_noisy.ipynb  variables.ipynb  variables_correlation.ipynb
examples/MPM/agosto/: check_resolution.ipynb
examples/MPM/files/: l_testing_avg.csv  l_testing_std.csv  svd_testing_avg.csv  svd_testing_avg_3.csv  svd_testing_std.csv
examples/metabolites/: metabolites.ipynb
examples/spin_echo_sim/: deprecated_functions.ipynb  spin_echo.ipynb
pyMRI/: pymri.py  utils.py
reports/auremn/: resumo.tex
reports/ismrm/: resumo.tex
reports/mpm/: refs.bib  report_mpm.tex
reports/noise/: refs.bib  report.aux  report.fdb_latexmk  report.fls  report.tex  report_backup.tex
(+195 files in other folders)
